extract string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,69 @@
 <resources>
     <string name="app_name">DailyFitness</string>
+    <string name="top_action_save">SAVE</string>
+    <string name="action_desc_delete_train_action">delete train action</string>
+    <string name="action_desc_edit_train_action">edit train action</string>
+    <string name="action_desc_edit_train_part">edit train part name</string>
+    <string name="action_desc_add_action">add new train action</string>
+    <string name="top_action_back">back</string>
+    <string name="edit_train_action">Edit train action</string>
+    <string name="new_train_action">Add new train action</string>
+    <string name="snackbar_add_success">Add successfully</string>
+    <string name="snackbar_add_failed">Add failed</string>
+    <string name="snackbar_del_success">Delete successfully</string>
+    <string name="snackbar_del_failed">Delete failed</string>
+    <string name="snackbar_load_failed">Load failed</string>
+    <string name="title_train_part">Train part</string>
+    <string name="title_train_action">Train action</string>
+    <string name="label_train_action_name">Train action name</string>
+    <string name="add_action_type_timed">Timed</string>
+    <string name="add_action_type_weighted">Weighted</string>
+    <string name="add_action_type_counted">Counted</string>
+    <string name="new_train_part">Add new train group</string>
+    <string name="edit_train_part">Edit train group</string>
+    <string name="dialog_action_save">Save</string>
+    <string name="dialog_action_cancel">Cancel</string>
+    <string name="dialog_action_delete">Delete</string>
+    <string name="title_delete_train_action">Delete train action</string>
+    <string name="desc_delete_train_action">You are deleting train action %1$s. Make sure there are no workout record before you confirmed to delete.</string>
+    <string name="label_part_train_count">Trained times</string>
+    <string name="label_action_train_group_count">Trained groups</string>
+    <string name="train_part_count_of_action">Train action x %1$s</string>
+    <string name="action_train_group_count">Groups x %1$s</string>
+    <string name="label_train_action_type_weighted">Weighted</string>
+    <string name="label_train_action_type_timed">Timed</string>
+    <string name="label_train_action_type_counted">Counted</string>
+    <string name="hint_invalid_input_num">Invalid input number</string>
+    <string name="title_dialog_delete_body_data">Delete body data</string>
+    <string name="desc_dialog_delete_body_date">Your are deleting body data recorded at %1$s.</string>
+    <string name="title_add_workout">Add new workout</string>
+    <string name="label_workout_weight">Weight</string>
+    <string name="label_workout_duration">Duration</string>
+    <string name="label_workout_count">Count</string>
+    <string name="label_workout_note">Note</string>
+    <string name="title_dialog_delete_workout">Deelete workout</string>
+    <string name="desc_dialog_delete_workout">You are deleting workout %2$s %3$s recorded at %1$s.</string>
+    <string name="title_add_body_data">Add new body data</string>
+    <string name="title_body_data">Body data</string>
+    <string name="title_home_workout">Workouts</string>
+    <string name="label_home_workout_count_monthly">Monthly</string>
+    <string name="label_home_workout_count_unit">times</string>
+    <string name="label_home_workout_count_weekly">Weekly</string>
+    <string name="label_home_workout_latest_weight">Latest weight</string>
+    <string name="label_home_workout_latest_bust_size">Latest bust</string>
+    <string name="label_home_workout_latest_waist_size">Latest waist</string>
+    <string name="label_home_workout_latest_hip_size">Latest hip</string>
+    <string name="label_home_workout_latest_body_fat">Latest fat</string>
+    <string name="title_workout_monthly">Workout monthly</string>
+    <string name="desc_top_action_add_action">Add workout</string>
+    <string name="title_daily_workout">Workout daily</string>
+    <string name="label_workout_group_unit">%1$s groups</string>
+    <string name="label_train_part_unit">%1$s times</string>
+    <string name="fab_action_add_workout">Add new workout</string>
+    <string name="fab_action_add_body_data">Add new body data</string>
+    <string name="fab_action_add_train_group">Add new train part</string>
+    <string name="fab_action_add_train_action">Add new train action</string>
+    <string name="bottom_nav_title_home">Home</string>
+    <string name="bottom_nav_title_body">Body</string>
+    <string name="bottom_nav_title_train">Train</string>
 </resources>
