--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,3 +1,70 @@
 <resources>
     <string name="app_name">健身日志</string>
+    <string name="edit_train_action">编辑训练动作</string>
+    <string name="new_train_action">新增训练动作</string>
+    <string name="snackbar_add_success">添加成功</string>
+    <string name="snackbar_add_failed">添加失败</string>
+    <string name="snackbar_del_success">删除成功</string>
+    <string name="snackbar_del_failed">删除失败</string>
+    <string name="snackbar_load_failed">加载失败</string>
+    <string name="title_train_part">训练部位</string>
+    <string name="title_train_action">训练动作</string>
+    <string name="label_train_action_name">动作名称</string>
+    <string name="add_action_type_timed">计时动作</string>
+    <string name="add_action_type_weighted">计重动作</string>
+    <string name="add_action_type_counted">计次动作</string>
+    <string name="new_train_part">新增训练部位</string>
+    <string name="edit_train_part">修改训练部位</string>
+    <string name="dialog_action_save">保存</string>
+    <string name="dialog_action_cancel">取消</string>
+    <string name="dialog_action_delete">删除</string>
+    <string name="title_delete_train_action">删除训练动作</string>
+    <string name="desc_delete_train_action">你将要删除训练动作%1$s。删除前请保证此训练动作没有训练记录。</string>
+
+    <string name="top_action_save">保存</string>
+    <string name="action_desc_delete_train_action">删除训练动作</string>
+    <string name="action_desc_edit_train_action">编辑训练动作</string>
+    <string name="action_desc_edit_train_part">编辑动作组名称</string>
+    <string name="action_desc_add_action">添加新训练动作</string>
+    <string name="top_action_back">返回</string>
+    <string name="fab_action_add_workout">新增训练</string>
+    <string name="fab_action_add_body_data">新增身体数据</string>
+    <string name="fab_action_add_train_group">新增动作组</string>
+    <string name="fab_action_add_train_action">新增动作</string>
+    <string name="label_part_train_count">部位训练数</string>
+    <string name="label_action_train_group_count">训练总组数</string>
+    <string name="train_part_count_of_action">%1$s个动作</string>
+    <string name="action_train_group_count">%1$s组</string>
+    <string name="label_train_action_type_weighted">计重</string>
+    <string name="label_train_action_type_timed">计时</string>
+    <string name="label_train_action_type_counted">计次</string>
+    <string name="hint_invalid_input_num">输入数字有误</string>
+    <string name="title_dialog_delete_body_data">删除身体数据记录</string>
+    <string name="desc_dialog_delete_body_date">你将要删除记录于%1$s的身体数据记录。</string>
+    <string name="title_add_workout">新增训练记录</string>
+    <string name="label_workout_weight">重量</string>
+    <string name="label_workout_duration">时长</string>
+    <string name="label_workout_count">次数</string>
+    <string name="label_workout_note">备注</string>
+    <string name="title_dialog_delete_workout">删除动作记录</string>
+    <string name="desc_dialog_delete_workout">你将要删除记录于%1$s的动作记录%2$s %3$s</string>
+    <string name="title_add_body_data">记录身体数据</string>
+    <string name="title_body_data">身体数据</string>
+    <string name="title_home_workout">训练记录</string>
+    <string name="label_home_workout_count_monthly">本月训练</string>
+    <string name="label_home_workout_count_unit">次</string>
+    <string name="label_home_workout_count_weekly">本周训练</string>
+    <string name="label_home_workout_latest_weight">最近体重</string>
+    <string name="label_home_workout_latest_bust_size">最近胸围</string>
+    <string name="label_home_workout_latest_waist_size">最近腰围</string>
+    <string name="label_home_workout_latest_hip_size">最近臀围</string>
+    <string name="label_home_workout_latest_body_fat">最近体脂率</string>
+    <string name="title_workout_monthly">训练月报</string>
+    <string name="desc_top_action_add_action">添加训练动作</string>
+    <string name="title_daily_workout">训练日志</string>
+    <string name="label_workout_group_unit">%1$s组</string>
+    <string name="label_train_part_unit">%1$s轮</string>
+    <string name="bottom_nav_title_home">首页</string>
+    <string name="bottom_nav_title_body">身体</string>
+    <string name="bottom_nav_title_train">训练</string>
 </resources>
